--- a/milestone_02.html
+++ b/milestone_02.html
@@ -14,21 +14,21 @@
 	</head>
 	<body>
 		<h1>My Geography 485L/585L Home Page</h1>
-		<p>About me</p>
-		<p>Why I'm taking the course</p>
+		<p>My name is Andrew Martinez. My major is environmental science and a minor is GIS Science.</p>
+		<p>I am taking this course because internet mapping seems like a very useful skill.</p>
 		
 		<h2>Topics I'm interested in</h2>
 		<ul>
-			<li>topic 1</li>
-			<li>topic 2</li>
-			<li>more topics ...</li>
+			<li>In house map making.</li>
+			<li>In house data serving for GIS applications.</li>
+			<li>Global Warming</li>
 		</ul>
 		
 		<h2>Types of data I have worked with (themes & formats)</h2>
 		<ul>
-			<li>data type 1</li>
-			<li>data type 2</li>
-			<li>more data types ...</li>
+			<li>GIS Data eg. shapefiles</li>
+			<li>Tiff</li>
+			<li>KML</li>
 		</ul>
 		
 		<h2>Milestones</h2>
