--- a/milestones_02.html
+++ b/milestones_02.html
@@ -11,16 +11,16 @@
 	</head>
 	<body>
 	<p>
-	Your Name<br>
-	Date
+	Andrew Martinez<br>
+	January 29 2014
 	</p>
 	<h1>Lab Assignment / Assignment #</h1>
 	<h2>Question 1</h2>
-	<p>answer ...</p>
+	<p>Spaces after lines in the html mean nothing. The code automatically provides the paces based on the ending of paragraphs an ul's, blank lines spaces and tabs are not as imporatant as the p's,ul's and li's.</p>
 	<h2>Question 2</h2>
-	<p>answer ...</p>
+	<p>the h1's start and end a title and the h2's are smaller and at lower levels.</h1></p>
 	<h2>Question n</h2>
-	<p>answer ...</p>
+	<p>You would use li's to add new topics or data.</p>
 	</body>
 </html>
 
