--- a/index.html
+++ b/index.html
@@ -15,23 +15,22 @@
 	</head>
 	<body>
 		<h1>My Geography 485L/585L Home Page</h1>
-		<p>About me</p>
-		<p>Why I'm taking the course</p>
+		<p>My name is Andrew Martinez, I am majoring in Environmental Science with a minor in GIS Science.</p>
+		<p>I am taking this class because I feel that it will become very relevant in the future.</p>
 		
 		<h2>Topics I'm interested in</h2>
 		<ul>
 
-			<li>topic 1</li>
-			<li>topic 2</li>
-			<li>more topics ...</li>
+			<li>GIS Applications</li>
+			<li>In house data serving</li>
+			<li>Geoserver development and functionality</li>
 		</ul>
 		
 		<h2>Types of data I have worked with (themes & formats)</h2>
 		<ul>
 
-			<li>data type 1</li>
-			<li>data type 2</li>
-			<li>more data types ...</li>
+			<li>Only GIS data  eg. shapefiles</li>
+			
 		</ul>
 		
 		<h2>Milestones</h2>
