--- a/index_styled.html
+++ b/index_styled.html
@@ -9,6 +9,8 @@
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 		<title>A Starter Page Template</title>
 		<style type=text/css>
+		  body( color: blue; )
+		
 			
 		</style>
 
