--- a/index_styled.html
+++ b/index_styled.html
@@ -10,6 +10,8 @@
 		<title>A Starter Page Template</title>
 		<style type=text/css>
 		  body{ color: blue;}
+		  body{ font-family: sans-serif; }
+		  h1 ,h2 {font-family; serif; }
 		</style>
 
 	</head>
