--- a/index_styled.html
+++ b/index_styled.html
@@ -9,7 +9,7 @@
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 		<title>A Starter Page Template</title>
 		<style type=text/css>
-		  body{ color: blue;}
+		  li{ color: blue;}
 		  body{ font-family: sans-serif; }
 		  h1 ,h2 {font-family; serif; }
 		</style>
