--- a/index_styled.html
+++ b/index_styled.html
@@ -11,7 +11,7 @@
 		<style type=text/css>
 		  li{ color: green;}
 		  body{ font-family: sans-serif; }
-		  h1 ,h2 {font-family; serif; }
+		  h1 ,h2 {font-family; sans-serif; }
 		</style>
 
 	</head>
