--- a/index_styled.html
+++ b/index_styled.html
@@ -12,7 +12,7 @@
 		  li{ color: green;}
 		  body{ font-family: sans-serif; }
 		  h1 ,h2{font-family; sans-serif; }
-		  p{ margin-left: 10%; margin-right: 10% }
+		  p,li{ margin-left: 10%; margin-right: 10% }
 		</style>
 
 	</head>
