--- a/index_styled.html
+++ b/index_styled.html
@@ -12,7 +12,7 @@
 		  li{ color: green;}
 		  body{ font-family: sans-serif; }
 		  h1 ,h2{font-family; sans-serif; }
-		  p,li,h2{ margin-left: 7%; margin-right: 7% }
+		  p,li,{ margin-left: 7%; margin-right: 7% }
 		</style>
 
 	</head>
