--- a/index_styled.html
+++ b/index_styled.html
@@ -10,7 +10,7 @@
 		<title>A Starter Page Template</title>
 		<style type=text/css>
 		  li{ color: green;}
-		  body{ font-family: sans-serif; }
+		  body{ font-family: Garamond; }
 		  h1 ,h2{font-family; sans-serif; }
 		  p,li{ margin-left: 5%; margin-right: 5% }
 		</style>
