--- a/milestone_03.html
+++ b/milestone_03.html
@@ -15,16 +15,16 @@
 	Andrew Martinez<br>
 	Febuary 4th 2014
 	</p>
-	<h1>Lab Assignment / Assignment #</h1>
+	<h1>Lab Assignment / Assignment #3</h1>
 	<h2>Question 1</h2>
-	<p>answer ...</p>
+	<p>Chimayo New Mexico because it is my hometown.</p>
 
 	<h2>Question 2</h2>
-	<p>answer ...</p>
+	<p>36.013005,-105.963264</p>
 	<h2>Question 3</h2>
-	<p>answer ...</p>
+	<p>A satellite because it shows my house.</p>
 	<h2>Question 4</h2>
-	<p>answer ...</p>
+	<p>Local, the zoom level will be more concentrated then at a regional or continetal level.</p>
   </body>
 </html>
 
