--- a/milestone_03.html
+++ b/milestone_03.html
@@ -23,7 +23,31 @@
 	<p>A satellite because it shows my house.</p>
 	<h2>Question 4</h2>
 	<p>Local, the zoom level will be more concentrated then at a regional or continetal level.</p>
-  </body>
+  
+  meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+    <style type="text/css">
+      html { height: 100% }
+      body { height: 100%; margin: 0; padding: 0 }
+      #map-canvas { height: 100% }
+    </style>
+    <script type="text/javascript"
+      src="https://maps.googleapis.com/maps/api/js?key=API_KEY&sensor=SET_TO_TRUE_OR_FALSE">
+    </script>
+    <script type="text/javascript">
+      function initialize() {
+        var mapOptions = {
+          center: new google.maps.LatLng(-34.397, 150.644),
+          zoom: 8
+        };
+        var map = new google.maps.Map(document.getElementById("map-canvas"),
+            mapOptions);
+      }
+      google.maps.event.addDomListener(window, 'load', initialize);
+		 </script>
+  		</head>
+	 </body>
+  
+  
 </html>
 
 
