--- a/milestone_03.html
+++ b/milestone_03.html
@@ -31,7 +31,7 @@
       	#map-canvas { height: 100% }
     	</style>
     	<script type="text/javascript"
-      	src="https://maps.googleapis.com/maps/api/js?key=API_KEY&sensor=FALSE">
+      	src="https://maps.googleapis.com/maps/api/js?key=API_KEY&sensor=TRUE">
     	</script>
 	 <script type="text/javascript">
       	function initialize() {
