--- a/milestone_03.html
+++ b/milestone_03.html
@@ -48,7 +48,7 @@
       google.maps.event.addDomListener(window, 'load', initialize);
     </script>
   </head>
-
+	<div id="map-canvas"/>
 	</body>
   
   
