--- a/milestones_03.html
+++ b/milestones_03.html
@@ -23,10 +23,8 @@
 	<p>A satellite because it shows my house.</p>
 	<h2>Question 4</h2>
 	<p>Local, the zoom level will be more concentrated then at a regional or continetal level.</p>
-  
+  	</body>
   	</head>
   	
-  	<he
-  
-  
+
 </html>
