--- a/milestone_03.html
+++ b/milestone_03.html
@@ -34,9 +34,8 @@
       #map-canvas { height: 100% }
     </style>
     <script type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDA40HrT-EsovqW3lNhrlRIp77nSulKzTk&sensor=TRUE">
-    </script>
-    <script type="text/javascript">
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDA40HrT-EsovqW3lNhrlRIp77nSulKzTk&sensor=FALSE
+      <script type="text/javascript">
       function initialize() {
         var mapOptions = {
           center: new google.maps.LatLng(36.013005, -105.963264),
