--- a/milestone_03.html
+++ b/milestone_03.html
@@ -20,7 +20,7 @@
 	<h2>Question 2</h2>
 	<p>36.013005,-105.963264</p>
 	<h2>Question 3</h2>
-	<p>A satellite because it shows my house.</p>
+	<p>A satellite because it shows my house and the ponds i would like to study.</p>
 	<h2>Question 4</h2>
 	<p>Local, the zoom level will be more concentrated then at a regional or continetal level.</p>
   
