--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
 		
 		<h2>Deep Dives</h2>
 		<p><a href="">Deep Dive 1</a></p>
+		
+		<h2> 1st Map</h2>
+		<p><a href=http://aemtoyo.github.io/geog485/milestone_03.html</a></p>
 	</body>
 </html>
 
