--- a/index.html
+++ b/index.html
@@ -34,14 +34,13 @@
 		</ul>
 		
 		<h2>Milestones</h2>
-		<p><a href="">Milestone 2</a></p>
+		<p><a href="http://aemtoyo.github.io/geog485/milestone_03.html">Milestone 3</a></p>
 
 		
 		<h2>Deep Dives</h2>
 		<p><a href="">Deep Dive 1</a></p>
 		
-		<h2> 1st Map</h2>
-		<p><a href="http://aemtoyo.github.io/geog485/milestone_03.html"</a></p>
+	
 	</body>
 </html>
 
