--- a/milestone_03.html
+++ b/milestone_03.html
@@ -59,7 +59,7 @@
 	</head>
 	
 	<body onload="initialize()">
-	  <h1>Sample Map</h1>
+	  <h1>Chimayo, New Mexico</h1>
 	  <div id="map_canvas"></div>
 	</body>
   
