--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 		</ul>
 		
 		<h2>Milestones</h2>
+		<p><a href="http://aemtoyo.github.io/geog485/helloworld.html">Milestone 1</a></p>
 		<p><a href="http://aemtoyo.github.io/geog485/milestones_02.html">Milestone 2</a></p>
 		<p><a href="http://aemtoyo.github.io/geog485/milestone_03.html">Milestone 3</a></p>
 
