--- a/milestones_02.html
+++ b/milestones_02.html
@@ -21,7 +21,11 @@
 	<p>the h1's start and end a title and the h2's are smaller and at lower levels.</h1></p>
 	<h2>Question n</h2>
 	<p>You would use li's to add new topics or data.</p>
+	
+	<p><a href="http://aemtoyo.github.io/geog485/styled_index.html">Milestone 2</a></p>
+		
 	</body>
+	
 </html>
 
 
