--- a/milestones_02.html
+++ b/milestones_02.html
@@ -22,7 +22,7 @@
 	<h2>Question n</h2>
 	<p>You would use li's to add new topics or data.</p>
 	
-	<p><a href="http://aemtoyo.github.io/geog485/styled_index.html">Milestone 2</a></p>
+	<p><a href="http://aemtoyo.github.io/geog485/index_styled.html">Milestone 2</a></p>
 		
 	</body>
 	
