--- a/milestone_04.html
+++ b/milestone_04.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -51,6 +50,32 @@
 			  zoom: 17,
 			  center: classroom,
 			  mapTypeId: google.maps.MapTypeId.HYBRID
+			  styles: [
+  {
+    "featureType": "water",
+    "stylers": [
+      { "hue": "#1100ff" },
+      { "gamma": 0.2 }
+    ]
+  },{
+    "featureType": "road.local",
+    "elementType": "geometry",
+    "stylers": [
+      { "hue": "#ff0008" },
+      { "invert_lightness": true },
+      { "visibility": "on" }
+    ]
+  },{
+    "featureType": "landscape.man_made",
+    "stylers": [
+      { "visibility": "on" },
+      { "hue": "#22ff00" },
+      { "saturation": 35 },
+      { "lightness": 20 },
+      { "gamma": 0.51 }
+    ]
+  }
+]
 			};
 			var map = new google.maps.Map(
 				document.getElementById("map_canvas"),
@@ -64,34 +89,8 @@
 	  <div id="map_canvas"></div>
 	
 	</body>
-	</script>
-	[
-  {
-    "featureType": "water",
-    "elementType": "geometry.fill",
-    "stylers": [
-      { "visibility": "on" },
-      { "color": "#8080ff" }
-    ]
-  },{
-    "featureType": "poi.attraction",
-    "elementType": "labels",
-    "stylers": [
-      { "visibility": "on" },
-      { "color": "#ffff05" }
-    ]
-  },{
-    "featureType": "landscape.natural.landcover",
-    "elementType": "labels.icon",
-    "stylers": [
-      { "visibility": "on" },
-      { "color": "#b53080" }
-    ]
-  }
-]
+	
 
-</script>
-  
   
   
 </html>
