--- a/milestone_04.html
+++ b/milestone_04.html
@@ -49,7 +49,7 @@
 			var myOptions = {
 			  zoom: 17,
 			  center: classroom,
-			  mapTypeId: google.maps.MapTypeId.HYBRID
+			  mapTypeId: google.maps.MapTypeId.MAP
 			  styles: [
   {
     "featureType": "water",
