--- a/milestone_04.html
+++ b/milestone_04.html
@@ -54,6 +54,32 @@
 			var map = new google.maps.Map(
 			document.getElementById("map_canvas"),
 			myOptions);
+			styles: [
+  {
+    "featureType": "water",
+    "stylers": [
+      { "hue": "#1100ff" },
+      { "gamma": 0.2 }
+    ]
+  },{
+    "featureType": "road.local",
+    "elementType": "geometry",
+    "stylers": [
+      { "hue": "#ff0008" },
+      { "invert_lightness": true },
+      { "visibility": "on" }
+    ]
+  },{
+    "featureType": "landscape.man_made",
+    "stylers": [
+      { "visibility": "on" },
+      { "hue": "#22ff00" },
+      { "saturation": 35 },
+      { "lightness": 20 },
+      { "gamma": 0.51 }
+    ]
+  }
+]
 		  }
 		</script>
 	</head>
