--- a/milestone_04.html
+++ b/milestone_04.html
@@ -54,7 +54,7 @@
 			var map = new google.maps.Map(
 			document.getElementById("map_canvas"),
 			myOptions);
-			styles: [
+			var stylesarray: [
   {
     "featureType": "water",
     "stylers": [
