--- a/TEST.html
+++ b/TEST.html
@@ -47,11 +47,11 @@
 </script>
 <script type="text/javascript">
   function initialize() {
-    var classroom = new google.maps.LatLng(35.084280,-106.624073)
+    var classroom = new google.maps.LatLng(36.013005,-105.963264)
     var myOptions = {
       zoom: 8,
       center: classroom,
-      mapTypeId: google.maps.MapTypeId.ROADMAP,
+      mapTypeId: google.maps.MapTypeId.MAP,
       styles: [
               {
                 featureType: "water",
