--- a/TEST.html
+++ b/TEST.html
@@ -90,7 +90,7 @@
 </head>
 
 <body onload="initialize()">
-  <h1>Sample Map - Styled (POIs Emphasized)</h1>
+  <h1>Chimayo, New Mexico</h1>
   <div id="map_canvas"></div>
 </body>
 
