--- a/deepdive_01.html
+++ b/deepdive_01.html
@@ -7,24 +7,20 @@
 	
 	<head>
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-		<title>Geography 485L/585L Assignment Template</title>
+		<title>Geography 485L/585L Deep Dive 1</title>
 	</head>
 	<body>
 
 	<p>
 	Andrew Martinez<br>
-	Febuary 4th 2014
+	Febuary 20th 2014
 	</p>
-	<h1>Lab Assignment / Assignment #3</h1>
-	<h2>Question 1</h2>
-	<p>Chimayo New Mexico because it is my hometown.</p>
+	<h1>Deep Dive Assignment1</h1>
+	<h2>Brief Descriptoin of Study Area</h2>
+	<p>The area of study is in Northern New Mexico. Chimayo is located 7 miles east along State Road 76. Chimayo has a population of 3,177. Total area of the town in near 5.5 sq miles there are no lakes in the town. However, 2 miles further east is the Santa Cruz Lake. The lake covers 121 surface acres.</p>
 
-	<h2>Question 2</h2>
-	<p>36.013005,-105.963264</p>
-	<h2>Question 3</h2>
-	<p>A satellite because it shows my house and the ponds i would like to study.</p>
-	<h2>Question 4</h2>
-	<p>Local, the zoom level will be more concentrated then at a regional or continetal level.</p>
+	<h2>Purpose</h2>
+	<p>The area below Santa Cruz lake is being studied because the locals in the area depend solely on water released from this lake to grow their crops. Acequias are known for providing the paths in which the water is distributed to the inhabitants of Chimayo. The acequias will be highlighted in the map.</p>
 
   
   	</head>
