--- a/deepdive_01.html
+++ b/deepdive_01.html
@@ -10,6 +10,16 @@
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 		<title>Geography 485L/585L Deep Dive 1</title>
 	</head>
+	<style type="text/css">
+		  html { height: 100% }
+		  body { height: 100%; 
+			margin: 0px; 
+			padding: 0px; 
+			background-color: black; 
+			color: #CCCCCC;
+			text-align: left
+			</style>
+			
 	<body>
 
 	<p>
