--- a/deepdive_01.html
+++ b/deepdive_01.html
@@ -13,8 +13,8 @@
 	<style type="text/css">
 		  html { height: 100% }
 		  body { height: 100%; 
-			margin: 0px; 
-			padding: 0px; 
+			margin: 10px; 
+			padding: 5px; 
 			background-color: black; 
 			color: #CCCCCC;
 			text-align: left
@@ -27,7 +27,7 @@
 	Febuary 20th 2014
 	</p>
 	<h1>Deep Dive Assignment1</h1>
-	<h2>Brief Descriptoin of Study Area</h2>
+	<h2>Brief Description of Study Area</h2>
 	<p>The area of study is in Northern New Mexico. Chimayo is located 7 miles east along State Road 76. Chimayo has a population of 3,177. Total area of the town in near 5.5 sq miles there are no lakes in the town. However, 2 miles further east is the Santa Cruz Lake. The lake covers 121 surface acres.</p>
 
 	<h2>Purpose</h2>
