--- a/deepdive_01.html
+++ b/deepdive_01.html
@@ -18,7 +18,27 @@
 			background-color: black; 
 			color: #CCCCCC;
 			text-align: left
-			</style>
+			#map_canvas { width:90%; 
+			height:80%; 
+			margin-left: auto; 
+			margin-right: auto }
+		</style>
+		<script type="text/javascript"
+			src="http://maps.google.com/maps/api/js?sensor=false">
+		</script>
+		<script type="text/javascript">
+		  function initialize() {
+			var classroom = new google.maps.LatLng(36.013005,-105.963264)
+			var myOptions = {
+			  zoom: 17,
+			  center: classroom,
+			  mapTypeId: google.maps.MapTypeId.HYBRID
+			};
+			var map = new google.maps.Map(
+				document.getElementById("map_canvas"),
+				myOptions);
+		  }
+		</script>
 			
 	<body>
 
@@ -36,5 +56,9 @@
   
   	</head>
   	
+<body onload="initialize()">
 
+	  <h1>Chimayo, New Mexico</h1>
+	  <div id="map_canvas"></div>
+	</body>
 </html>
