--- a/deepdive_01.html
+++ b/deepdive_01.html
@@ -48,7 +48,7 @@
 			var myOptions = {
 			  zoom: 17,
 			  center: classroom,
-			  mapTypeId: google.maps.MapTypeId.HYBRID
+			  mapTypeId: google.maps.MapTypeId.MAP
 			};
 			var map = new google.maps.Map(
 				document.getElementById("map_canvas"),
@@ -62,3 +62,6 @@
 	 <div id="map_canvas"></div>
 	</body>
 </html>
+
+
+
