--- a/deepdive_01.html
+++ b/deepdive_01.html
@@ -31,7 +31,7 @@
 			padding: 5px; 
 			background-color: black; 
 			color: #CCCCCC;
-			text-align: center}
+			text-align: left}
 		  #map_canvas { width:90%; 
 			height:80%; 
 			margin-left: auto; 
@@ -46,7 +46,7 @@
 			var myOptions = {
 			  zoom: 17,
 			  center: classroom,
-			  mapTypeId: google.maps.MapTypeId.HYBRID
+			  mapTypeId: google.maps.MapTypeId.MAP
 			};
 			var map = new google.maps.Map(
 				document.getElementById("map_canvas"),
