--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 		
 		<h2>Deep Dives</h2>
-		<p><a href="">Deep Dive 1</a></p>
+		<p><a href="http://aemtoyo.github.io/geog485/deepdive_01.html">Deep Dive 1</a></p>
 		
 	
 	</body>
