--- a/deepdive_01.html
+++ b/deepdive_01.html
@@ -43,7 +43,7 @@
 		<script type="text/javascript">
 		  function initialize() {
 			var classroom = new google.maps.LatLng(36.013005,-105.963264)
-			var lakeMarker = new google.maps.LatLng(35974394,-105.917351)
+			var lakeMarker = new google.maps.LatLng(35.974394,-105.917351)
 			var myOptions = {
 			  zoom: 13,
 			  center: classroom,
