--- a/deepdive_01.html
+++ b/deepdive_01.html
@@ -54,7 +54,7 @@
 				myOptions);
 			var lakeMarker = new google.maps.Marker({
 			  position: classroom,
-			  title:"Sanat Cruz Lake"
+			  title:"Santa Cruz Lake"
 			  });
 			 classroomMarker.setMap(map);
 		</script>
