--- a/milestone_04.html
+++ b/milestone_04.html
@@ -49,7 +49,7 @@
 			var myOptions = {
 			  zoom: 13,
 			  center: classroom,
-			  mapTypeId: google.maps.MapTypeId.MAP
+			  mapTypeId: google.maps.MapTypeId.ROADMAP
 			  styles: [
 				  {
     				    "featureType": "water",
