--- a/milestone_04.html
+++ b/milestone_04.html
@@ -45,10 +45,10 @@
 		</script>
 		<script type="text/javascript">
 		  function initialize() {
-			var classroom = new google.maps.LatLng(36.013005,-105.963264)
+			var chimayo = new google.maps.LatLng(36.013005,-105.963264)
 			var myOptions = {
 			  zoom: 13,
-			  center: classroom,
+			  center: chimayo,
 			  mapTypeId: google.maps.MapTypeId.ROADMAP
 			  styles: [
 				  {
