--- a/milestone_04.html
+++ b/milestone_04.html
@@ -50,32 +50,7 @@
 			  zoom: 13,
 			  center: chimayo,
 			  mapTypeId: google.maps.MapTypeId.ROADMAP
-			  styles: [
-				  {
-    				    "featureType": "water",
-    				    "stylers": [
-      				       { "hue": "#1100ff" },
-                                       { "gamma": 0.2 }
-                                  ]
-                                },{
-                                  "featureType": "road.local",
-                                  "elementType": "geometry",
-                                  "stylers": [
-      				     { "hue": "#ff0008" },
-          			     { "invert_lightness": true },
-      			             { "visibility": "on" }
-    				   ]
-				},{
-    				  "featureType": "landscape.man_made",
-    				  "stylers": [
-      				     { "visibility": "on" },
-      				     { "hue": "#22ff00" },
-      			 	     { "saturation": 35 },
-      				     { "lightness": 20 },
-      				     { "gamma": 0.51 }
-    				   ]
-  				}
-			     ]
+			  styles: 
   	};
 	var map = new google.maps.Map(document.getElementById("map_canvas"),
 		 myOptions);
