--- a/milestone_04.html
+++ b/milestone_04.html
@@ -27,39 +27,81 @@
   	</head>
   	
   	<head>
-		<style type="text/css">
-		  html { height: 100% }
-		  body { height: 100%; 
-			margin: 0px; 
-			padding: 0px; 
-			background-color: black; 
-			color: #CCCCCC;
-			text-align: center}
-		  #map_canvas { width:90%; 
-			height:80%; 
-			margin-left: auto; 
-			margin-right: auto }
-		</style>
-		<script type="text/javascript"
-			src="http://maps.google.com/maps/api/js?sensor=false">
-		</script>
-		<script type="text/javascript">
-		  function initialize() {
-			var chimayo = new google.maps.LatLng(36.013005,-105.963264)
-			var myOptions = {
-			  zoom: 13,
-			  center: chimayo,
-			  mapTypeId: google.maps.MapTypeId.ROADMAP
-			  styles: 
-			  [ { "featureType": "water", "elementType": "geometry.fill", "stylers": [ { "visibility": "on" }, { "color": "#ff0000" } ] },{ "featureType": "landscape.man_made", "stylers": [ { "color": "#ffff00" } ] },{ "featureType": "road.local", "elementType": "geometry", "stylers": [ { "color": "#808080" } ] } 
-  	};
-	var map = new google.maps.Map(document.getElementById("map_canvas"),
-		 myOptions);
-		 }
+<style type="text/css">
+  html { height: 100% }
+  body { height: 100%; 
+    margin: 0px; 
+    padding: 0px; 
+    background-color: black; 
+    color: #CCCCCC;
+    text-align: center}
+  #map_canvas { width:90%; 
+    height:80%; 
+    margin-left: 
+    auto; 
+    margin-right: auto }
+</style>
+<script type="text/javascript"
+    src="http://maps.google.com/maps/api/js?v=3.2&sensor=false">
+</script>
+<script type="text/javascript">
+  function initialize() {
+    var classroom = new google.maps.LatLng(35.084280,-106.624073)
+    var myOptions = {
+      zoom: 8,
+      center: classroom,
+      mapTypeId: google.maps.MapTypeId.ROADMAP,
+      styles: [
+              {
+                featureType: "water",
+                stylers: [
+                  { visibility: "on" },
+                  { hue: "#0008ff" }
+                ]
+              },{
+                featureType: "road.highway",
+                stylers: [
+                  { hue: "#ff1a00" }
+                ]
+              },{
+                featureType: "road.arterial",
+                stylers: [
+                  { hue: "#ffa200" },
+                  { visibility: "simplified" }
+                ]
+              },{
+                featureType: "road.local",
+                stylers: [
+                  { visibility: "off" }
+                ]
+              },{
+                featureType: "administrative",
+                stylers: [
+                  { visibility: "simplified" }
+                ]
+              },{
+                featureType: "poi",
+                stylers: [
+                  { visibility: "on" },
+                  { hue: "#00ffff" }
+                ]
+              },{
+                featureType: "poi",
+                stylers: [
+                  { visibility: "on" }
+                ]
+              }
+            ]
+    };
+    var map = new google.maps.Map(document.getElementById("map_canvas"),
+        myOptions);
+  }
 </script>
 </head>
+
 <body onload="initialize()">
-  <h1>Chimayo, New Mexico</h1>
-   <div id="map_canvas"></div>
+  <h1>Sample Map - Styled (POIs Emphasized)</h1>
+  <div id="map_canvas"></div>
 </body>
+
 </html>
