--- a/milestone_04.html
+++ b/milestone_04.html
@@ -100,7 +100,7 @@
 </head>
 
 <body onload="initialize()">
-  <h1>Sample Map - Styled (POIs Emphasized)</h1>
+  <h1>Chiamyo, NM</h1>
   <div id="map_canvas"></div>
 </body>
 
