--- a/milestone_04.html
+++ b/milestone_04.html
@@ -56,7 +56,7 @@
                 featureType: "water",
                 stylers: [
                   { visibility: "on" },
-                  { hue: "#0008ff" }
+                  { color: "#ff0000" }
                 ]
               },{
                 featureType: "road.highway",
