--- a/milestone_04.html
+++ b/milestone_04.html
@@ -59,9 +59,9 @@
                   { color: "#ff0000" }
                 ]
               },{
-                featureType: "road.highway",
+                featureType: "road.local",
                 stylers: [
-                  { hue: "#ff1a00" }
+                  { color: "#808080" }
                 ]
               },{
                 featureType: "road.arterial",
