--- a/milestone_04.html
+++ b/milestone_04.html
@@ -60,7 +60,7 @@
                 ]
               },{
                 featureType: "road.local",
-                elementType: "geometry"
+                elementType: "geometry",
                 stylers: [
                   { color: "#808080" }
                 ]
