--- a/milestone_04.html
+++ b/milestone_04.html
@@ -65,9 +65,9 @@
                   { color: "#808080" }
                 ]
               },{
-                featureType: "road.arterial",
+                featureType: "landscape.man_made",
                 stylers: [
-                  { hue: "#ffa200" },
+                  { hue: "#ffff00" },
                   { visibility: "simplified" }
                 ]
               },{
