--- a/milestone_04.html
+++ b/milestone_04.html
@@ -54,7 +54,7 @@
       styles: [
               {
                 featureType: "water",
-                elementType: "geometry.fill"
+                elementType: "geometry.fill",
                 stylers: [
                   { visibility: "on" },
                   { color: "#ff0000" }
