--- a/milestone_04.html
+++ b/milestone_04.html
@@ -68,7 +68,7 @@
               },{
                 featureType: "landscape.man_made",
                 stylers: [
-                  { hue: "#ffff00" },
+                  {color: "#ffff00" },
                   { visibility: "simplified" }
                
                 ]
