--- a/deepdive_01.html
+++ b/deepdive_01.html
@@ -80,7 +80,7 @@
      
      var pond1Marker = new google.maps.Marker({
 			  position: pond1,
-			  title:"Geography 485L/585L Classroom, Bandelier East, Room 106"
+			  title:"Storage Pond 1 (1 of 3 on this acequia)"
 			  });
 			pond1Marker.setMap(map);
 			
