--- a/deepdive_01.html
+++ b/deepdive_01.html
@@ -93,7 +93,7 @@
 			  });
 			pond2Marker.setMap(map);
 			
-     var pon31Marker = new google.maps.Marker({
+     var pond3Marker = new google.maps.Marker({
 			  position: pond3,
 			  title:"Storage Pond 3 (3 of 3 on this acequia)"
 			  });
