--- a/deepdive_01.html
+++ b/deepdive_01.html
@@ -102,7 +102,7 @@
      
      var hwsantacruzMarker = new google.maps.Marker({
 			  position: hwsantacruz,
-			  title:"Headwaters for all the acequias in Chimayo are here at Santa Cruz Lake."
+			  title:"Santa Cruz Lake."
 			  });
 			hwsantacruzMarker.setMap(map);
 			
