--- a/deepdive_01.html
+++ b/deepdive_01.html
@@ -53,7 +53,7 @@
     var floodcontrol = new google.maps.LatLng(36.011165,-105.979879)
     
     var myOptions = {
-      zoom: 14,
+      zoom: 15,
       center: chimayo,
       mapTypeId: google.maps.MapTypeId.ROADMAP,
       styles: [
@@ -107,7 +107,7 @@
 			  });
 			hwsantacruzMarker.setMap(map);
     
-     var floodcontrol = new google.maps.Marker({
+     var floodcontrolMarker = new google.maps.Marker({
 			  position: floodcontrol,
 			  title:"Flood Control Dam"
 			  });
