--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	
 	<head>
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-		<title>A Starter Page Template</title>
+		<title>Geography 485 Internet Mapping</title>
 		<style type=text/css>
 			
 		</style>
