--- a/deepdive_01.html
+++ b/deepdive_01.html
@@ -85,19 +85,19 @@
      
      var pond1Marker = new google.maps.Marker({
 			  position: pond1,
-			  title:"Storage Pond 1 (1 of 3 on this acequia)"
+			  title:"Storage Pond 1"
 			  });
 			pond1Marker.setMap(map);
 			
      var pond2Marker = new google.maps.Marker({
 			  position: pond2,
-			  title:"Storage Pond 2 (2 of 3 on this acequia)"
+			  title:"Storage Pond 2"
 			  });
 			pond2Marker.setMap(map);
 			
      var pond3Marker = new google.maps.Marker({
 			  position: pond3,
-			  title:"Storage Pond 3 (3 of 3 on this acequia)"
+			  title:"Storage Pond 3"
 			  });
 			pond3Marker.setMap(map);
      
@@ -113,7 +113,7 @@
 			  });
 			floodcontrolMarker.setMap(map);
 		
-    var pond1InfoContent = '<div class="infoBox">' +
+    var classInfoContent = '<div class="infoBox">' +
 			  '<p>This is the location for 1 of the 3 storage ponds along this acequia.</p>' +
 			  '</div>'
 			var classInfoWindow = new google.maps.InfoWindow({
