--- a/deepdive_01.html
+++ b/deepdive_01.html
@@ -132,6 +132,16 @@
 			google.maps.event.addListener(pond2Marker, 'click', function() {
 			  classInfoWindow.open(map,pond2Marker);
 			});
+			
+    var classInfoContent = '<div class="infoBox">' +
+			  '<p>This is the location for 3 of the 3 storage ponds along this acequia.</p>' +
+			  '</div>'
+			var classInfoWindow = new google.maps.InfoWindow({
+			  content: classInfoContent
+			  });
+			google.maps.event.addListener(pond3Marker, 'click', function() {
+			  classInfoWindow.open(map,pond3Marker);
+			});
   }
 </script>
 </head>
