--- a/deepdive_01.html
+++ b/deepdive_01.html
@@ -36,6 +36,7 @@
 			height:80%; 
 			margin-left: auto; 
 			margin-right: auto }
+		.infobox{ color:black );
 		</style>
 		<script type="text/javascript"
 			src="http://maps.google.com/maps/api/js?sensor=false">
