--- a/deepdive_01.html
+++ b/deepdive_01.html
@@ -114,6 +114,15 @@
 			  title:"Flood Control Dam"
 			  });
 			floodcontrolMarker.setMap(map);
+	
+     var classInfoContent = '<div class="infoBox">' +
+			  '<p>This is the location for the Geography 485L/585L class</p>' +
+			  '</div>'
+			var classInfoWindow = new google.maps.InfoWindow({
+			  content: classInfoContent
+			  });
+			google.maps.event.addListener(pond1Marker, 'click', function() {
+			  classInfoWindow.open(map,pond1Marker);
   });
 }
 </script>
@@ -126,9 +135,3 @@
 </body>
 
 </html>
-
-
-
-
-
-
