--- a/deepdive_01.html
+++ b/deepdive_01.html
@@ -36,7 +36,7 @@
 			height:80%; 
 			margin-left: auto; 
 			margin-right: auto }
-		
+		  .infoBox { color:black }
 		
 		</style>
 		<script type="text/javascript"
