--- a/deepdive_01.html
+++ b/deepdive_01.html
@@ -116,7 +116,7 @@
 			floodcontrolMarker.setMap(map);
 	
      var classInfoContent = '<div class="infoBox">' +
-			  '<p>This is the location for the Geography 485L/585L class</p>' +
+			  '<p>This is the location of 1 of 3 storage ponds along this acequia.</p>' +
 			  '</div>'
 			var classInfoWindow = new google.maps.InfoWindow({
 			  content: classInfoContent
