--- a/deepdive_01.html
+++ b/deepdive_01.html
@@ -123,7 +123,17 @@
 			  });
 			google.maps.event.addListener(pond1Marker, 'click', function() {
 			  classInfoWindow.open(map,pond1Marker);
-  });
+  			  });
+  
+  var classInfoContent = '<div class="infoBox">' +
+			  '<p>This is the location for the Geography 485L/585L class</p>' +
+			  '</div>'
+			var classInfoWindow = new google.maps.InfoWindow({
+			  content: classInfoContent
+			  });
+			google.maps.event.addListener(pond2Marker, 'click', function() {
+			  classInfoWindow.open(map,pond2Marker);
+			  });
 }
 </script>
 </head>
