--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 		<p><a href="http://aemtoyo.github.io/geog485/milestones_02.html">Milestone 2</a></p>
 		<p><a href="http://aemtoyo.github.io/geog485/milestone_03.html">Milestone 3</a></p>
 		<p><a href="http://aemtoyo.github.io/geog485/milestone_04.html">Milestone 4</a></p>
+		<p><a href= "http://aemtoyo.github.io/geog485/milestone_05.html"Milestone 5</a></p>
 		
 		<h2>Deep Dives</h2>
 		<p><a href="http://aemtoyo.github.io/geog485/deepdive_01.html">Deep Dive 1</a></p>
