--- a/milestone_05.html
+++ b/milestone_05.html
@@ -34,12 +34,8 @@
     padding: 0px; 
     background-color: black; 
     color: #CCCCCC;
-    text-align: center}
-  #map_canvas { width:90%; 
-    height:80%; 
-    margin-left: 
-    auto; 
-    margin-right: auto }
+    text-align: left}
+
 
 
 </html>
