--- a/deepdive_01.html
+++ b/deepdive_01.html
@@ -145,7 +145,7 @@
 			  classInfoWindow.open(map,pond3Marker);
 			});
 			
-    var floodcontrolmarkerInfoContent = '<div class="infoBox">' +
+    var classInfoContent = '<div class="infoBox">' +
 			  '<p>This is the location for a flood control dam. Monsoon season rains in this area produce high run off due to the minimal amount of vegetation. To control possible high dischage values this dams are built. This dam does not contain water on a daily basis.</p>' +
 			  '</div>'
 			var classInfoWindow = new google.maps.InfoWindow({
