--- a/deepdive_01.html
+++ b/deepdive_01.html
@@ -115,7 +115,7 @@
 			  });
 			floodcontrolMarker.setMap(map);
 	
-     var classInfoContent = '<div class="infoBox">' +
+     var pond1InfoContent = '<div class="infoBox">' +
 			  '<p>This is the location of 1 of 3 storage ponds along this acequia.</p>' +
 			  '</div>'
 			var classInfoWindow = new google.maps.InfoWindow({
