--- a/deepdive_01.html
+++ b/deepdive_01.html
@@ -118,7 +118,7 @@
      var pond1InfoContent = '<div class="infoBox">' +
 			  '<p>This is the location of 1 of 3 storage ponds along this acequia.</p>' +
 			  '</div>'
-			var classInfoWindow = new google.maps.InfoWindow({
+			var pond1InfoWindow = new google.maps.InfoWindow({
 			  content: classInfoContent
 			  });
 			google.maps.event.addListener(pond1Marker, 'click', function() {
