--- a/deepdive_01.html
+++ b/deepdive_01.html
@@ -119,7 +119,7 @@
 			  '<p>This is the location of 1 of 3 storage ponds along this acequia.</p>' +
 			  '</div>'
 			var pond1InfoWindow = new google.maps.InfoWindow({
-			  content: classInfoContent
+			  content: pond1InfoContent
 			  });
 			google.maps.event.addListener(pond1Marker, 'click', function() {
 			  classInfoWindow.open(map,pond1Marker);
