--- a/deepdive_01.html
+++ b/deepdive_01.html
@@ -122,7 +122,7 @@
 			  content: pond1InfoContent
 			  });
 			google.maps.event.addListener(pond1Marker, 'click', function() {
-			  classInfoWindow.open(map,pond1Marker);
+			  pond1InfoWindow.open(map,pond1Marker);
 			});
   
      var classInfoContent = '<div class="infoBox">' +
