--- a/deepdive_01.html
+++ b/deepdive_01.html
@@ -125,14 +125,14 @@
 			  pond1InfoWindow.open(map,pond1Marker);
 			});
   
-     var classInfoContent = '<div class="infoBox">' +
+     var pond2InfoContent = '<div class="infoBox">' +
 			  '<p>This is the location for 2 of the 3 storage ponds along this acequia.</p>' +
 			  '</div>'
-			var classInfoWindow = new google.maps.InfoWindow({
-			  content: classInfoContent
+			var ppnd2InfoWindow = new google.maps.InfoWindow({
+			  content: pond2InfoContent
 			  });
 			google.maps.event.addListener(pond2Marker, 'click', function() {
-			  classInfoWindow.open(map,pond2Marker);
+			  pond2InfoWindow.open(map,pond2Marker);
 			});
 			
      var classInfoContent = '<div class="infoBox">' +
