--- a/deepdive_01.html
+++ b/deepdive_01.html
@@ -128,7 +128,7 @@
      var pond2InfoContent = '<div class="infoBox">' +
 			  '<p>This is the location for 2 of the 3 storage ponds along this acequia.</p>' +
 			  '</div>'
-			var ppnd2InfoWindow = new google.maps.InfoWindow({
+			var pond2InfoWindow = new google.maps.InfoWindow({
 			  content: pond2InfoContent
 			  });
 			google.maps.event.addListener(pond2Marker, 'click', function() {
