--- a/deepdive_01.html
+++ b/deepdive_01.html
@@ -135,34 +135,34 @@
 			  pond2InfoWindow.open(map,pond2Marker);
 			});
 			
-     var classInfoContent = '<div class="infoBox">' +
+     var pond3InfoContent = '<div class="infoBox">' +
 			  '<p>This is the location for 3 of the 3 storage ponds along this acequia.</p>' +
 			  '</div>'
-			var classInfoWindow = new google.maps.InfoWindow({
-			  content: classInfoContent
+			var pond3InfoWindow = new google.maps.InfoWindow({
+			  content: pond3InfoContent
 			  });
 			google.maps.event.addListener(pond3Marker, 'click', function() {
-			  classInfoWindow.open(map,pond3Marker);
+			  pond3InfoWindow.open(map,pond3Marker);
 			});
 			
-    var classInfoContent = '<div class="infoBox">' +
+    var floodcontrolInfoContent = '<div class="infoBox">' +
 			  '<p>This is the location for a flood control dam. Monsoon season rains in this area produce high run off due to the minimal amount of vegetation. To control possible high dischage values this dams are built. This dam does not contain water on a daily basis.</p>' +
 			  '</div>'
-			var classInfoWindow = new google.maps.InfoWindow({
-			  content: classInfoContent
+			var floodcontrolInfoWindow = new google.maps.InfoWindow({
+			  content: floodcontrolInfoContent
 			  });
 			google.maps.event.addListener(floodcontrolMarker, 'click', function() {
-			  classInfoWindow.open(map,floodcontrolMarker);
+			  floodcontrolInfoWindow.open(map,floodcontrolMarker);
 			});
 			
-    var classInfoContent = '<div class="infoBox">' +
+    var hwsantacruzInfoContent = '<div class="infoBox">' +
 			  '<p>Thirty miles north of Santa Fe, NM , the snow-fed waters of the Rio del Medio and the Rio Frijoles begin a 2,000-mile journey and a 7,000-foot descent to the Gulf of Mexico. For a time they gather at Santa Cruz Lake at the base of the Sangre de Cristo Mountains near Chimayo, behind the 125-foot Santa Cruz Dam.Built in 1929 by the Santa Cruz Irrigation District, the dam is 535 feet across and 90 feet deep at the overflowing spillway. The lake covers 121 surface acres with water in the foothills of the Sangre de Cristo Mountains, providing recreational opportunities for anglers, picnickers, campers, and boat lovers alike.Santa Cruz Lake Recreation Area is located on public land managed by the Bureau of Land Management (BLM). The Santa Cruz Irrigation District regulates water releases for agricultural use in the Santa Cruz Valley. The lake normally contains water year-round and may vary in depth as much as 30 feet..</p>' +
 			  '</div>'
-			var classInfoWindow = new google.maps.InfoWindow({
-			  content: classInfoContent
+			var hwsantacruzInfoWindow = new google.maps.InfoWindow({
+			  content: hwsantacruzInfoContent
 			  });
 			google.maps.event.addListener(hwsantacruzMarker, 'click', function() {
-			  classInfoWindow.open(map,hwsantacruzMarker);
+			  hwsntacruzInfoWindow.open(map,hwsantacruzMarker);
 			});
   }
 </script>
