--- a/deepdive_01.html
+++ b/deepdive_01.html
@@ -162,7 +162,7 @@
 			  content: hwsantacruzInfoContent
 			  });
 			google.maps.event.addListener(hwsantacruzMarker, 'click', function() {
-			  hwsntacruzInfoWindow.open(map,hwsantacruzMarker);
+			  hwsantacruzInfoWindow.open(map,hwsantacruzMarker);
 			});
   }
 </script>
@@ -175,3 +175,4 @@
 </body>
 
 </html>
+
