--- a/milestone_05.html
+++ b/milestone_05.html
@@ -14,16 +14,22 @@
 	Andrew Martinez<br>
 	Febuary 4th 2014
 	</p>
-	<h1>Lab Assignment / Assignment #3</h1>
-	<h2>Question 1</h2>
-	<p>Chimayo New Mexico because it is my hometown.</p>
-	<h2>Question 2</h2>
-	<p>36.013005,-105.963264</p>
-	<h2>Question 3</h2>
-	<p>A satellite because it shows my house and the ponds i would like to study.</p>
-	<h2>Question 4</h2>
-	<p>Local, the zoom level will be more concentrated then at a regional or continetal level.</p>
-  
+	<h1>Lab Assignment / Assignment #5</h1>
+	<h2>Question 1 / Briefly describe each dataset based upon the information from the web site.</h2>
+	<p>.</p>
+	<h2>Question 2 / Examine each file using either gdalinfo or ogrinfo (depending upon whether it is a raster or vector data product), and answer the following questions about each data set:
+
+What is the projection/coordinate system for the data product? If it is undefined, note it.
+
+What is the spatial extent (i.e. bounding box) of the data product?
+
+If it is a vector dataset, how many features does it have?
+
+If it is a raster dataset, what is the pixel resolution (include units) of the dataset?</h2>
+	<p></p>
+	<h2>Question 3 / Use proj or cs2cs (I suggest you use cs2cs) to calculate the coordinates of the spatial extent of the datasets that you downloaded in UTM Zone 13N, NAD27. Paste the input and output of the command(s) into your writeup.</h2>
+	<p></p>
+
   	</head>
   	
   	<head>
