--- a/milestone_06.html
+++ b/milestone_06.html
@@ -28,6 +28,12 @@
 </p>
 	<p></p>
 	<h2>Question 4 (service #1)</h2>
+	<ul>
+		<li>What is the URL for the full GetCapabilities request to the service?</li>
+		<li>What is the Name of the service?</li>
+		<li>What Format(s) are available for GetMap requests from the service?</li>
+		<li>How many layers are included in the service (including nesting layers)?</li>
+	</ul>
 	<p></p>
 	<p></p>
 	<h2>Question 5</h2>
