--- a/milestone_06.html
+++ b/milestone_06.html
@@ -35,16 +35,31 @@
 		<li>How many layers are included in the service (including nesting layers)?</li>
 	</ul>
 	<p></p>
+	<h2>Question 4 (service #2)</h2>
+	<ul> 
+		<li>What is the URL for the full GetCapabilities request to the service?</li>
+		<li>What is the Name of the service?</li>
+		<li>What Format(s) are available for GetMap requests from the service?</li>
+		<li>How many layers are included in the service (including nesting layers)?</li>
+	</ul>
 	<p></p>
 	<h2>Question 5</h2>
-	<p></p>
+	<p>For one of the layers in the first service,</p>
+	<ul>
+		<li>What is the name of the layer?</li>
+		<li>What is the SRS of the layer?</li>
+		<li>What is the name of the projection that matches the SRS EPSG code?</li>
+		<li>What is the LatLonBoundingBox of the layer?</li>
+	</ul>
 	<p></p>
 	<h2>Question 6</h2>
+	<ul>
+		<li>for the area surrounding Bernalillo County (-107.2,34.7,-106,35.25) as a 200x200 pixel JPEG</li>
+		<li>for the same area as a 500x500 pixel PNG</li>
+	</ul>
 	<p></p>
 	<p></p>
 	<h2>Question 7</h2>
-	<p></p>
-	<p></p>
 	
 
 	</body>
