--- a/milestone_06.html
+++ b/milestone_06.html
@@ -9,6 +9,15 @@
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 		<title>Geography 485L/585L Assignment 6</title>
 	</head>
+	
+	<style type="text/css">
+		  html { height: 100% }
+		  body { height: 100%; 
+			margin: 10px; 
+			padding: 10px; 
+			background-color: black; 
+			color: #CCCCCC;
+			text-align: ledt}
 	<body>
 	<p>
 	Andrew Martinez<br>
