--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 		<p><a href="http://aemtoyo.github.io/geog485/milestone_03.html">Milestone 3</a></p>
 		<p><a href="http://aemtoyo.github.io/geog485/milestone_04.html">Milestone 4</a></p>
 		<p><a href="http://aemtoyo.github.io/geog485/milestone_05.html">Milestone 5</a></p>
+		<p><a href="http://aemtoyo.github.io/geog485/milestone_06.html">Milestone 6</a></p>
 		
 		
 		<h2>Deep Dives</h2>
