--- a/milestone_06.html
+++ b/milestone_06.html
@@ -17,7 +17,7 @@
 			padding: 10px; 
 			background-color: black; 
 			color: #CCCCCC;
-			text-align: ledt}
+			text-align: left}
 	<body>
 	<p>
 	Andrew Martinez<br>
