--- a/milestone_06.html
+++ b/milestone_06.html
@@ -27,15 +27,13 @@
 	<h1>Lab Assignment / Assignment #5</h1>
 	<h2>Question 1</h2>
 	<p>What search engine did you use?</p>
-	<p></p>
+	<p>Google</p>
 	<h2>Question 2</h2>
 	<p>How many ‘hits’ did you get?</p>
-	<p></p>
+	<p>About 246,000</p>
 	<h2>Question 3</h2>
 	<p>How useful (generally in terms of getting a pointers to live WMS services [defined as a functioning GetCapabilities request]) were the ‘hits’?
-<p>Pick two of the services that included live "GetCapabilities" requests that you found above, and answer the following questions about each.</p>
-
-</p>
+<p>Pick two of the services that included live "GetCapabilities" requests that you found above, and answer the following questions about each.</p></p>
 	<p></p>
 	<h2>Question 4 (service #1)</h2>
 	<ul>
