--- a/milestone_06.html
+++ b/milestone_06.html
@@ -34,7 +34,13 @@
 	<h2>Question 3</h2>
 	<p>How useful (generally in terms of getting a pointers to live WMS services [defined as a functioning GetCapabilities request]) were the ‘hits’?
 <p>Pick two of the services that included live "GetCapabilities" requests that you found above, and answer the following questions about each.</p></p>
-	<p></p>
+	<p> The hits were suprisingly useful many of the of the "hits' on the first page were useful in regards to the "GetCapabilities"</p>
+	<p> The two that I will be using are; <ul>
+		<li>http://webservices.nationalatlas.gov/wms/water?SERVICE=WMS&REQUEST=GetCapabilities</li>
+		<li>http://LIDARserver.com/vancouver?SERVICE=WMS&REQUEST=GetCapabilities</li>
+	</ul>
+		
+	</p>
 	<h2>Question 4 (service #1)</h2>
 	<ul>
 		<li>What is the URL for the full GetCapabilities request to the service?</li>
