--- a/milestone_06.html
+++ b/milestone_06.html
@@ -35,7 +35,8 @@
 	<p>How useful (generally in terms of getting a pointers to live WMS services [defined as a functioning GetCapabilities request]) were the ‘hits’?
 <p>Pick two of the services that included live "GetCapabilities" requests that you found above, and answer the following questions about each.</p></p>
 	<p> The hits were suprisingly useful many of the of the "hits' on the first page were useful in regards to the "GetCapabilities"</p>
-	<p> The two that I will be using are; <ul>
+	<p> The two that I will be using are; 
+	<ul>
 		<li>http://webservices.nationalatlas.gov/wms/water?SERVICE=WMS&REQUEST=GetCapabilities</li>
 		<li>http://LIDARserver.com/vancouver?SERVICE=WMS&REQUEST=GetCapabilities</li>
 	</ul>
