--- a/milestone_06.html
+++ b/milestone_06.html
@@ -33,8 +33,8 @@
 	<p>About 246,000</p>
 	<h2>Question 3</h2>
 	<p>How useful (generally in terms of getting a pointers to live WMS services [defined as a functioning GetCapabilities request]) were the ‘hits’?
-<p>Pick two of the services that included live "GetCapabilities" requests that you found above, and answer the following questions about each.</p></p>
-	<p> The hits were suprisingly useful many of the of the "hits' on the first page were useful in regards to the "GetCapabilities"</p>
+<p>Pick two of the services that included live "GetCapabilities" requests that you found above, and answer the following questions about each.</p>
+The hits were suprisingly useful many of the of the "hits' on the first page were useful in regards to the "GetCapabilities"</p>
 	<p> The two that I will be using are; 
 	<ul>
 		<li>http://webservices.nationalatlas.gov/wms/water?SERVICE=WMS&REQUEST=GetCapabilities</li>
